--- a/src/index.css
+++ b/src/index.css
@@ -9,16 +9,24 @@ html, body, div, span, applet, object, iframe,h1, h2, h3, h4, h5, h6, p{
 ol, ul {
   list-style: none;
 }
+
+@font-face {
+  font-family: 'circular-std';
+  src: url(./assets/fonts/circular-std-medium-500.ttf) format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'circular-std';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  line-height: 1.2;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
