--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 .jira {
   height: 100vh;
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
+  /* font-weight: 300; */
   display: flex;
   
 }
@@ -90,7 +90,7 @@
 .menu {
   height: 100vh;
   /* height: auto; */
-  width: 17%;
+  width: 20%;
   /* margin-left: 4%; */
   background-color: #f4f5f7;
 }
@@ -118,7 +118,9 @@
 
 .menu .account .account-info p:first-child {
   margin-bottom: 3px;
-  font-weight: 500;
+  font-weight: bold;
+  font-size: 1rem;
+  text-align: left;
 }
 
 .menu .account .account-info p:last-child {
@@ -144,7 +146,9 @@
 .menu .control div i {
   margin-right: 5px;
 }
-
+.menu .feature div span {
+  cursor: not-allowed;
+}
 .menu .feature div i {
   margin-right: 5px;
 }
@@ -489,3 +493,89 @@
 .estimate-time {
   font-size: 14px;
 }
+
+.bg-signin {
+  background: linear-gradient(#141e30, #243b55);
+}
+.btn-signup {
+  background-image: linear-gradient(
+    to right,
+    #50c9c3 0%,
+    #96deda 51%,
+    #50c9c3 100%
+  );
+}
+.btn-signup {
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+ 
+  border-radius: 10px;
+  display: block;
+}
+
+.btn-signup:hover {
+  background-position: right center; 
+  color: #fff;
+  text-decoration: none;
+}
+
+.btn-signin {
+  background-image: linear-gradient(
+    to right,
+    #1fa2ff 0%,
+    #12d8fa 51%,
+    #1fa2ff 100%
+  );
+}
+.btn-signin {
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  /* box-shadow: 0 0 20px #eee; */
+  border-radius: 10px;
+  display: block;
+}
+
+.btn-signin:hover {
+  background-position: right center; 
+  color: #fff;
+  text-decoration: none;
+}
+
+.btn-grad {
+  background-image: linear-gradient(
+    to right,
+    #1fa2ff 0%,
+    #12d8fa 51%,
+    #1fa2ff 100%
+  );
+}
+.btn-grad {
+  padding: 15px 45px;
+  text-align: center;
+  
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+}
+
+.btn-grad:hover {
+  background-position: right center; 
+  color: #fff;
+  text-decoration: none;
+}
+
+
+
