feature: add responsiveness to detail page

--- a/src/index.css
+++ b/src/index.css
@@ -241,6 +241,14 @@
   text-align: center;
   line-height: 35px;
   display: inline-block;
+  /* width: calc(100%);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap; */
+}
+
+.CollapsedText {
+  display: inline-block;
   width: calc(100%);
   text-overflow: ellipsis;
   overflow: hidden;
@@ -400,6 +408,10 @@
 .modal-info .modal-body .issue {
   font-size: 20px;
   font-weight: 500;
+  width: calc(100%);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .modal-info .modal-body .description p:first-child {
@@ -440,6 +452,7 @@
   padding: 3px;
   border-radius: 5px;
   flex-basis: 50%;
+  display: flex;
 }
 
 .item .avatar img {
@@ -449,6 +462,11 @@
 
 .item .name {
   margin: 0;
+  width: calc(80%);
+  display: inline-block;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .reporter .item {
@@ -496,6 +514,11 @@
 .logged,
 .estimate-time {
   font-size: 14px;
+  width: calc(100%);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  padding: 0 5px;
 }
 
 .bg-signin {
@@ -585,6 +608,10 @@
   min-width: 673px;
 }
 
+.Details {
+  flex: 0 0 33.333333%;
+}
+
 @media screen and (max-width: 768px) {
   .LoginSideBackground {
     display: none;
@@ -593,12 +620,58 @@
   .menu {
     display: none;
   }
+
+  .Details {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .status {
+    width: 100%;
+  }
+
+  .assignees {
+    width: calc(50% - 16px);
+  }
+
+  .priority {
+    width: calc(50% - 16px);
+  }
+
+  .estimate {
+    width: calc(50% - 16px);
+  }
+
+  .time-tracking {
+    width: calc(50% - 16px);
+  }
 }
 
-.Navigation, .account-info {
+.Navigation,
+.account-info {
   display: inline-block;
   width: calc(100%);
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+}
+
+.assignee {
+  width: 100%;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.CloseBtn {
+  float: right;
+  font-size: 1.5rem;
+  font-weight: 700;
+  line-height: 1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  opacity: 0.5;
+  border: none;
 }
